# iamthat

./: .codespell.words  Cargo.toml  README.md  results.json
.devcontainer/: devcontainer.json
example/: README.md
example/failing_tests/: wrong_expectations.json  wrong_expectations_expected.json
example/request/: s3_delete_bucket.json  s3_list.json
example/resource_policy/: s3_list.json
example/scenario/: s3_list.json
example/testcase/: s3_basics.json
schema/: README.md  policy.json  request.json  scenario.json  tag.json  testcase.json  user.json
src/: action.rs  effect.rs  json.rs  lib.rs  main.rs  policy.rs  policyset.rs  principal.rs  request.rs  scenario.rs  tag.rs  testcase.rs  user.rs
tests/api/: main.rs  policy.rs  policyset.rs  scenario.rs
tests/cli/: eval.rs  generate_schemas.rs  main.rs  scenario.rs  testcase.rs
