[package]
name = "iamthat"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Martin Pool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
glob = "0.3.1"
mutants = "0.0.3"
regex = "1.7"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[dev-dependencies]
assert_cmd = { version = "2.0", features = ["color", "color-auto"] }
assert_fs = { version = "1.0", features = ["color", "color-auto"] }
indoc = "2"
predicates = "3.0.3"
